Documentation: - build requirements have been updated
Project:
- Android Studio Gradle Plugin has been updated to 8.11.1

core:
- constexpr constructor for GXMat4
- IDENTITY constant for GXMat4

Editor:
- save state supports GXMat4
- camera component stub
- point light component stub
- reflection component stub
- rigid body component stub
- script component stub
- skeletal mesh component stub
- sound emitter component stub
- static mesh component stub
- transform component stub

--- a/tools/editor/editor.vcxproj
+++ b/tools/editor/editor.vcxproj
@@ -861,6 +861,7 @@
     <ClCompile Include="src\action.cpp" />
     <ClCompile Include="src\actor.cpp" />
     <ClCompile Include="src\append_ui_child_element_event.cpp" />
+    <ClCompile Include="src\camera_component.cpp" />
     <ClCompile Include="src\component.cpp" />
     <ClCompile Include="src\crash_dump.cpp" />
     <ClCompile Include="src\div_ui_element.cpp" />
@@ -873,14 +874,22 @@
     <ClCompile Include="src\main_window.cpp" />
     <ClCompile Include="src\message_queue.cpp" />
     <ClCompile Include="src\os_utils.cpp" />
+    <ClCompile Include="src\point_light_component.cpp" />
     <ClCompile Include="src\prepend_ui_child_element_event.cpp" />
     <ClCompile Include="src\rect.cpp" />
+    <ClCompile Include="src\reflection_component.cpp" />
     <ClCompile Include="src\render_session.cpp" />
+    <ClCompile Include="src\rigid_body_component.cpp" />
     <ClCompile Include="src\save_state.cpp" />
+    <ClCompile Include="src\script_component.cpp" />
     <ClCompile Include="src\set_text_event.cpp" />
+    <ClCompile Include="src\skeletal_mesh_component.cpp" />
+    <ClCompile Include="src\sound_emitter_component.cpp" />
+    <ClCompile Include="src\static_mesh_component.cpp" />
     <ClCompile Include="src\text_ui_element.cpp" />
     <ClCompile Include="src\timer.cpp" />
     <ClCompile Include="src\timer_manager.cpp" />
+    <ClCompile Include="src\transform_component.cpp" />
     <ClCompile Include="src\ui_check_box.cpp" />
     <ClCompile Include="src\ui_close_button.cpp" />
     <ClCompile Include="src\ui_combo_box.cpp" />
@@ -975,6 +984,7 @@
     <ClInclude Include="include\action.hpp" />
     <ClInclude Include="include\actor.hpp" />
     <ClInclude Include="include\append_ui_child_element_event.hpp" />
+    <ClInclude Include="include\camera_component.hpp" />
     <ClInclude Include="include\component.hpp" />
     <ClInclude Include="include\crash_dump.hpp" />
     <ClInclude Include="include\cursor.hpp" />
@@ -993,15 +1003,23 @@
     <ClInclude Include="include\mouse_button_event.hpp" />
     <ClInclude Include="include\mouse_move_event.hpp" />
     <ClInclude Include="include\os_utils.hpp" />
+    <ClInclude Include="include\point_light_component.hpp" />
     <ClInclude Include="include\prepend_ui_child_element_event.hpp" />
     <ClInclude Include="include\rect.hpp" />
+    <ClInclude Include="include\reflection_component.hpp" />
     <ClInclude Include="include\render_session.hpp" />
+    <ClInclude Include="include\rigid_body_component.hpp" />
     <ClInclude Include="include\save_state.hpp" />
+    <ClInclude Include="include\script_component.hpp" />
     <ClInclude Include="include\set_text_event.hpp" />
+    <ClInclude Include="include\skeletal_mesh_component.hpp" />
+    <ClInclude Include="include\sound_emitter_component.hpp" />
+    <ClInclude Include="include\static_mesh_component.hpp" />
     <ClInclude Include="include\text_ui_element.hpp" />
     <ClInclude Include="include\theme.hpp" />
     <ClInclude Include="include\timer.hpp" />
     <ClInclude Include="include\timer_manager.hpp" />
+    <ClInclude Include="include\transform_component.hpp" />
     <ClInclude Include="include\ui_check_box.hpp" />
     <ClInclude Include="include\ui_close_button.hpp" />
     <ClInclude Include="include\ui_combo_box.hpp" />
