Documentation: - RenderDoc support has been excluded for Editor project - Preprocessor macros page: AV_ENABLE_NSIGHT has been described - RenderDoc page has been fixed - Shader compilation page has been updated
Project:
- .gitignore has been updated
- compile shaders with sources has been fixed

core:
- Android is using Vulkan 1.1
- Windows is using Vulkan 1.4
- using VkPhysicalDeviceFeatures2 instead of deprecated VkDeviceCreateInfo::pEnabledFeatures
- minimal set of physical features is used

Editor:
- NVIDIA Nsight Graphics integration
- Nsight build configuration has been added
- make-symlink script has been updated

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@
 /app/src/main/hlsl/disassm/blob.spvasm
 /app/src/main/hlsl/validation/blob.spv
 
+# NVIDIA Nsight Graphics config
+/app/src/main/assets/imgui.ini
+
 # Tools
 /tools/html-validator/.vscode/
 /tools/html-validator/build/
