core: - maxSamplerAnisotropy API - VkDevice creation logic refactoring - dynamic rendering for Windows
profiling:
- Anisotropic filter on mobile

--- a/app/src/main/cpp/include/vulkan_device.in
+++ b/app/src/main/cpp/include/vulkan_device.in
@@ -76,3 +76,10 @@ X ( vkResetFences )
 X ( vkUnmapMemory )
 X ( vkUpdateDescriptorSets )
 X ( vkWaitForFences )
+
+#ifdef VK_USE_PLATFORM_WIN32_KHR
+
+X ( vkCmdBeginRendering )
+X ( vkCmdEndRendering )
+
+#endif // VK_USE_PLATFORM_WIN32_KHR
