core: - descriptor buffer on PC - mutable descriptor type on PC - descriptor indexing on PC - buffer device address on PC - physical limits has been fixed for multi-GPU environments - added checking fullDrawIndexUint32 on mobile - added checking shaderInt16 on mobile - added checking textureCompressionASTC_LDR on mobile - vkGetPhysicalDeviceProperties2 loading

--- a/app/src/main/cpp/include/vulkan_device.in
+++ b/app/src/main/cpp/include/vulkan_device.in
@@ -79,7 +79,6 @@ X ( vkWaitForFences )
 
 #ifdef VK_USE_PLATFORM_WIN32_KHR
 
-X ( vkCmdBeginRendering )
-X ( vkCmdEndRendering )
+#include "platform/windows/vulkan_device.in"
 
 #endif // VK_USE_PLATFORM_WIN32_KHR
