--- a/app/src/main/cpp/include/vulkan_instance.in
+++ b/app/src/main/cpp/include/vulkan_instance.in
@@ -11,6 +11,7 @@ X ( vkGetPhysicalDeviceFeatures2 )
 X ( vkGetPhysicalDeviceFormatProperties )
 X ( vkGetPhysicalDeviceMemoryProperties )
 X ( vkGetPhysicalDeviceProperties )
+X ( vkGetPhysicalDeviceProperties2 )
 X ( vkGetPhysicalDeviceQueueFamilyProperties )
 X ( vkGetPhysicalDeviceSurfaceCapabilitiesKHR )
 X ( vkGetPhysicalDeviceSurfaceFormatsKHR )
