pbr: - separation to Windows and Android compute programs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -240,6 +240,7 @@ add_library ( android-vulkan SHARED
     app/src/main/cpp/sources/pbr/sweep_testing/sweep_testing.cpp
     app/src/main/cpp/sources/platform/android/file.cpp
     app/src/main/cpp/sources/platform/android/logger.cpp
+    app/src/main/cpp/sources/platform/android/pbr/compute_program.cpp
     app/src/main/cpp/sources/platform/android/pbr/graphics_program.cpp
     app/src/main/cpp/sources/platform/android/renderer.cpp
     app/src/main/cpp/sources/platform/android/trace.cpp
